# PyTrw

./: README.md
trw/: __init__.py
trw/src/: CMakeLists.txt  pyarraymodule.h  python.cpp
trw/src/core/: MRFEnergy.cpp  MRFEnergy.h  example.cpp  instances.inc  minimize.cpp  typeBinary.h  typeGeneral.h
